--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 Baseline/Moss/Data/BubbleSort/a.out
 Baseline/ExecTime/a.out
 Baseline/Moss/Data/BubbleSort/Array1.txt
+Baseline/Moss/Data/BubbleSort/input*
+Baseline/ExecTime/heap_sort
+Baseline/ExecTime/merge_sort
+Baseline/ExecTime/input*
