--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,4 @@ Baseline/Moss/Data/BubbleSort/Array1.txt
 Baseline/Moss/Data/BubbleSort/input*
 Baseline/ExecTime/heap_sort
 Baseline/ExecTime/merge_sort
-Baseline/ExecTime/input*
+Baseline/ExecTime/Input/input*
