--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,11 @@ tbcnn/vectorizer/__pycache__
 tbcnn/vectorizer/ast2vec/__pycache__
 tbcnn/vectorizer/logs
 
-Execution/Input/
-!Execution/Input/gen-input.py
+Execution/Input/input*
+
+Execution/Codes/bubble
+Execution/Codes/insertion
+Execution/Codes/selection
+Execution/Codes/merge
+Execution/Codes/quick
+Execution/Codes/heap
