--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ Execution/Input/input*
 Execution/Code/bubble
 Execution/Code/bubble_g
 Execution/Code/bubble-heap
+Execution/Code/bubble-heap_g
 Execution/Code/insertion
 Execution/Code/insertion_g
 Execution/Code/selection
@@ -12,5 +13,6 @@ Execution/Code/merge_g
 Execution/Code/quick
 Execution/Code/quick_g
 Execution/Code/quick-iter
+Execution/Code/quick-iter_g
 Execution/Code/heap
 Execution/Code/heap_g
