SVM-Light-TK and SVM Multiclass

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@ Execution/Code/quick-iter
 Execution/Code/quick-iter_g
 Execution/Code/heap
 Execution/Code/heap_g
+
+Kernels/svm-light-TK-1.5.zip
+Kernels/svm_multiclass.tar.gz
